--- a/src/app/contact-me/contact.scss
+++ b/src/app/contact-me/contact.scss
@@ -43,8 +43,6 @@
     flex-direction: column;
     overflow: scroll;
 
-    border-left: 1px solid variables.$lines !important;
-
     display: flex;
     justify-content: center;
     align-items: center;
